updating a few content bits to test deplu

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,10 +1,12 @@
-<h1>Who am I?</h1>
+<h1>Who are we?</h1>
 <div class='row'>
 	<div class='col-md-4'>
-		<%= image_tag "profile.jpg", width: 300, alt: 'Profile pic'%>
+		<%= image_tag "http://placehold.it/325x225", alt: 'Business logo'%>
 	</div>
 	<div class='col-md-8'>
-		<p>This page will give details about me personally, my likes, dislikes, attitudes, pastimes, what makes me tick etc. Keep it open-handed and light but with an underlying seriousness - I mean this.</p>
+		<p>Only 0.001% complaints to the ICO result in a penalty.  And you, the victim, don’t benefit financially.  Organisations are getting away with unlawfully processing your personal data.  No longer.  We're here to help you get what you deserve.  Run by three market experts, we'll step into the breach on your behalf.</p><div>We are:</div>
+		<div>Sandy Gilchrist – CEO priviness ltd, helping organisations to comply with your right to privacy and data protection</div>
+		<div>Simon Goldburn – CEO Privacy Pro Ltd, helping organisations adhere to their data protection obligations (& a co-author of the EU’s GDPR – General Data Protection Regulation)</div>
+		<div>Steve Hunter – Big Dog Consulting Ltd, managing cross-class insurance claims on- and off-shore. Claims and outsourcing expert.</div>
 	</div>
 </div>
-
