--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,10 @@
 <div class="inner cover">
   <h1 class="cover-heading">Welcome!</h1>
-  <p class="lead">Insert some text here to introduce the webpage and its purpose.</p>
+  <p class="lead">So, you've been a victim of a data breach?</p>
   <p class="lead">
-    <%= link_to "About me", about_path, class: "btn btn-lg btn-secondary" %>
+    <%= link_to "Get Started!", about_path, class: "btn btn-lg btn-secondary" %>
+  </p>
+  <p class="lead">
+  	Look no further.  Just provide us with a few bits of information.  We will step into the breach & take it from here.  Who knows, you may get compensated.
   </p>
 </div>
