--- a/app/views/shared/_portfolio_nav.html.erb
+++ b/app/views/shared/_portfolio_nav.html.erb
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-8 py-4">
-        <h4 class="text-white">Steve Hunter</h4>
-        <p class="text-muted">Add some interesting information about this site and me.</p>
+        <h4 class="text-white">Once More Ltd</h4>
+        <p class="text-muted">Business mission statement. </p>
       </div>
       <div class="col-sm-4 py-4">
         <h4 class="text-white">Explore!</h4>
@@ -18,7 +18,7 @@
 
 <div class="navbar navbar-inverse bg-inverse navbar-dark bg-dark">
   <div class="container d-flex justify-content-between">
-    <a href="/portfolios" class="navbar-brand">Steve's CV</a>
+    <a href="/portfolios" class="navbar-brand">Once More Ltd</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarHeader" aria-controls="navbarHeader" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
