--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -1,8 +1,8 @@
 <!-- start of blog header -->
 <div class="blog-header">
   <div class="container">
-    <h1 class="blog-title">My blog or other title</h1>
-    <p class="lead blog-description">Catchy subheading</p>
+    <h1 class="blog-title">Once more unto the breach ... </h1>
+    <p class="lead blog-description">Henry V</p>
     <%= link_to 'New Blog', new_blog_path if logged_in?(:site_admin) %>
   </div>
 </div>
