amending content to be more Remedy

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,6 @@
     <%= link_to "Get Started!", about_path, class: "btn btn-lg btn-secondary" %>
   </p>
   <p class="lead">
-  	Look no further.  Just provide us with a few bits of information.  We will step into the breach & take it from here.  Who knows, you may get compensated.
+  	Look no further. Just provide us with a few bits of information.  We will step into the breach & take it from here. You may get compensated.
   </p>
 </div>
