--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -3,10 +3,10 @@
 	<div class='col-md-4'>
 		<%= image_tag "http://placehold.it/325x225", alt: 'Business logo'%>
 	</div>
-	<div class='col-md-8'>
-		<p>Only 0.001% complaints to the ICO result in a penalty.  And you, the victim, don’t benefit financially.  Organisations are getting away with unlawfully processing your personal data.  No longer.  We're here to help you get what you deserve.  Run by three market experts, we'll step into the breach on your behalf.</p><div>We are:</div>
+	<div class='col-md-8 text-left'>
+		<div>Only 0.001% complaints to the ICO result in a penalty.  And you, the victim, don’t benefit financially.  Organisations are getting away with unlawfully processing your personal data.  No longer.  We're here to help you get what you deserve.  Run by three market experts, we'll step into the breach on your behalf.</div><div>We are:</div>
 		<div>Sandy Gilchrist – CEO priviness ltd, helping organisations to comply with your right to privacy and data protection</div>
 		<div>Simon Goldburn – CEO Privacy Pro Ltd, helping organisations adhere to their data protection obligations (& a co-author of the EU’s GDPR – General Data Protection Regulation)</div>
-		<div>Steve Hunter – Big Dog Consulting Ltd, managing cross-class insurance claims on- and off-shore. Claims and outsourcing expert.</div>
+		<div>Steve Hunter – Director and Chief Consultant, Big Dog Consultants Ltd, managing cross-class insurance claims on- and off-shore. Insurance claims and outsourcing expert.</div>
 	</div>
 </div>
