--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -2,35 +2,29 @@
 <hr class='lighter'>
 <div class='row'>
 	<div class='col-md-6'>
-		<h3>Office details:</h3>
-		<span><sub>Don't visit unannounced; dogs won't like that. See <%= link_to 'here', about_path %>.</sub></span>
-		<br />
-	  <div>The Willows, Old Harleston Rd</div>
-		<div>Earsham, Bungay NR35 2AG</div>
+		<h3>Office location:</h3>
+	  <div>7 Hungate, Beccles</div>
+		<div>Suffolk NR34 9TB</div>
 		<hr class='lighter'>
 		
-		<h3>Talk to me:</h3>
-		<div>Phone: 0845 095 0074</div>
-		<div>Mobile: 07854 075916</div>
+		<h3>Talk to us:</h3>
+		<div>Phone: 0203 123 4567</div>
 		<hr class='lighter'>
 		<h3>Web stuff:</h3>
-		<div><%= fa_icon('envelope-open') %> <%= mail_to 'steve.hunter@bigdogconsultants.co.uk', 'steve.hunter@bigdogconsultants.co.uk', subject: 'Website enquiry' %></div>
-		<div><%= fa_icon('envelope-open') %> <%= mail_to 'steve@stevehunter.co.uk', 'steve@stevehunter.co.uk', subject: 'Website enquiry' %>
-		</div>
+		<div><%= fa_icon('envelope-open') %> <%= mail_to 'breach@oncemore.com', 'breach@oncemore.com', subject: 'Website enquiry' %></div>
 
 		<!-- get this working -->
 
     <div class="social-links">
-      <span><%= link_to fa_icon('github'), 'https://github.com/OnlySteveH', target: :_blank, class: 'fa-2x icon-pad' %></span>
-      <span><%= link_to fa_icon('twitter'), 'https://twitter.com/OnlySteveH', target: :_blank, class: 'fa-2x icon-pad' %></span>
-      <span><%= link_to fa_icon('instagram'), 'https://www.instagram.com/onlysteveh/', target: :_blank, class: 'fa-2x icon-pad' %></span>
-      <span><%= link_to fa_icon('facebook'), 'https://www.facebook.com/OnlySteveH', target: :_blank, class: 'fa-2x icon-pad' %></span>
+      <span><%= link_to fa_icon('twitter'), '/#', target: :_blank, class: 'fa-2x icon-pad' %></span>
+      <span><%= link_to fa_icon('instagram'), '/#', target: :_blank, class: 'fa-2x icon-pad' %></span>
+      <span><%= link_to fa_icon('facebook'), '/#', target: :_blank, class: 'fa-2x icon-pad' %></span>
 	  </div>
 	  <hr>
 	  <!-- TODO the above -->
 	</div>
 	<div class='col-md-6'>
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4864.499796205989!2d1.3839898483813469!3d52.4383877592609!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d9f21d5aa4881b%3A0xef6334618c0a3944!2zNTLCsDI2JzE2LjEiTiAxwrAyMycyNC4zIkU!5e0!3m2!1sen!2suk!4v1571930277659!5m2!1sen!2suk" width="450" height="450" frameborder="2" style="border:2;" allowfullscreen=""></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2431.271120921578!2d1.5630391648414363!3d52.45611714871543!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d9f61820276043%3A0x3c3ef7827aa702be!2sBlyburgate%2C%20Beccles%20NR34%209TB!5e0!3m2!1sen!2suk!4v1579639674933!5m2!1sen!2suk" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 	</div>
 </div>
 
