adding privacy wording

--- a/app/views/pages/privacy.html.erb
+++ b/app/views/pages/privacy.html.erb
@@ -1,3 +1,11 @@
-privacy.html.erb
-
-Privacy notice goes here
+<div class='text-left'>
+	<div>
+		We just want you to get the compensation you’re entitled to.  That means processing your personal data in order to fulfil our contract with you, as per the T&Cs, to review the details you submit, to engage with you in your right to seek remedy for a particular breach you were a victim of, and to manage the paperwork till you have received any entitlement – obviously, it’s in our legitimate interests to provide a reasonable level of customer service, including the unlikely event of dealing with any complaints you might have about us, improving our performance by understanding how well we serve you, as well as letting you know about our other related products and services, not to mention ensuring a proportionate level of security when it comes to processing your personal data.
+</div>  
+<div>
+		Other parties also involved in making this all happen for you include the organisations who you’re seeking compensation from (and organisations they involve, such as their insurers), technology providers that facilitate our collection and processing of your details for the above, and Barclays, our bank, to ensure you get your entitled compensation.  We are obliged by law to keep your records for 3 years after your case is closed.
+</div>
+<div>
+	  You have various rights.  Just let us know if you wish to access, port, or rectify any of your personal information, or wish to object to us processing your personal data regarding those above activities we perform in our legitimate interests.  You have the right to complain to a regulator.  If you have any comments or questions about us or these organisations, please do contact us: Once More Ltd, 7 Hungate, Beccles, Suffolk, NR34 9TB | info@oncemore.com | 0203 123 4567
+</div>
+</div>
